# claude-mcp-fastly

./: .env.dist  .gitignore  .mcp.json  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  README.md  release-please-config.json
.changes/: 0.0.2.md
.changes/unreleased/: Fixed-20260504-133252.yaml
.claude/agents/: fastly_specialist.md
.github/ISSUE_TEMPLATE/: claude-mcp-fastly-bug-report.md  claude-mcp-fastly-feature-request.md  config.yml
.github/workflows/: ci.yml  release-pr.yml  release-tag.yml  release.yml
src/: app.rs  config.rs  error.rs  main.rs  shutdown.rs  telemetry.rs
src/mcp/: handler.rs  mod.rs  server.rs
src/mcp/prompts/: mod.rs
src/mcp/resources/: mod.rs
src/mcp/tasks/: mod.rs  slow_demo.rs
src/mcp/tools/: find_domain.rs  find_resource_acl_entry.rs  get_resource_config_store_item_value.rs  get_resource_kv_store_item_value.rs  get_service.rs  get_service_package.rs  hello.rs  list_resource_acls.rs  list_resource_config_store_items.rs  list_resource_config_stores.rs  list_resource_kv_store_items.rs  list_resource_kv_stores.rs  list_resource_secret_store_items.rs  list_resource_secret_stores.rs  list_service_backends.rs  list_service_dictionaries.rs  list_service_dictionary_items.rs  list_service_directors.rs  list_service_domains.rs  list_service_healthchecks.rs  list_service_resources.rs  list_service_vcl_apex_redirects.rs  list_service_vcl_cache_settings.rs  list_service_vcl_conditions.rs  list_service_vcl_gzip.rs  list_service_vcl_headers.rs  list_service_vcl_rate_limiters.rs  list_service_vcl_request_settings.rs  (+4 more)
