[package]
name = "claude-mcp-fastly"
description = ""
version = "0.0.1"
edition = "2024"
rust-version = "1.95.0"
authors = ["Aurelien Andre"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/aartintelligent/claude-mcp-fastly"
repository = "https://github.com/aartintelligent/claude-mcp-fastly"
keywords = ["mcp", "claude", "faslty", "ai"]
categories = ["command-line-utilities", "development-tools"]


[dependencies]

tokio = { version = "1", features = ["rt-multi-thread", "macros", "signal"] }
tokio-util = { version = "0.7", features = ["rt"] }

axum = "0.8"

rmcp = { version = "1.6", default-features = false, features = [
    "server",
    "macros",
    "transport-streamable-http-server",
    "schemars",
    "tower",
] }
schemars = "1"

serde = { version = "1", features = ["derive"] }

config = "0.15"
dotenvy = "0.15"

anyhow = "1"
thiserror = "2"

tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

fastly-api = "13"


[lints.rust]
unsafe_code = "forbid"
unused_must_use = "deny"

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
missing_errors_doc = "warn"
missing_panics_doc = "warn"
missing_safety_doc = "deny"
undocumented_unsafe_blocks = "deny"


[profile.release]
lto = "thin"
codegen-units = 1
strip = "symbols"

[profile.dev.package."*"]
opt-level = 1
